--- Changes since 2.0alpha1 ---

- Fix "Copy Complete" issue.
- Fixed issue where you could not use quick reply for recipients whose names
contained commas.
- Make standard keyboard shortcuts work even when the conversation view has
focus (forward them to the main window).
- Make sure we mark message as "replied to" (small blue arrow in the message
list).