@@ -1,5 +1,6 @@
 --- Changes since 2.0alpha1 ---
 
+- Take into account Reply-To headers when present for quick reply.
 - Fix "Copy Complete" issue.
 - Fixed issue where you could not use quick reply for recipients whose names
 contained commas.
